--- a/adminaudit.html
+++ b/adminaudit.html
@@ -199,20 +199,20 @@
         .modal-content { 
             background: var(--dark-light); 
             border-radius: 16px; 
-            padding: 2rem; 
-            max-width: 760px; 
-            width: 100%; 
+            padding: 2.4rem; 
+            max-width: 900px; 
+            width: 94%; 
             border: 2px solid var(--primary); 
-            max-height: 92vh; 
+            max-height: 94vh; 
             overflow-y: auto; 
         }
         .modal-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid var(--dark-lighter); }
         .modal-title { font-family: 'Syne', sans-serif; font-size: 1.5rem; background: linear-gradient(135deg, var(--primary), var(--accent)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
         .close-btn { background: none; border: none; color: var(--text-dim); font-size: 2rem; cursor: pointer; transition: color 0.3s ease; line-height: 1; padding: 0; }
         .close-btn:hover { color: var(--error); }
-        .modal-body { display: grid; gap: 1.5rem; }
-        .modal-section { background: var(--dark-lighter); padding: 1.5rem; border-radius: 8px; }
-        .modal-section h3 { font-family: 'Syne', sans-serif; color: var(--text); margin-bottom: 1rem; font-size: 1.1rem; }
+        .modal-body { display: grid; gap: 1.8rem; }
+        .modal-section { background: var(--dark-lighter); padding: 1.8rem; border-radius: 10px; }
+        .modal-section h3 { font-family: 'Syne', sans-serif; color: var(--text); margin-bottom: 1.2rem; font-size: 1.15rem; }
         .detail-row { display: grid; grid-template-columns: 140px 1fr; gap: 1rem; padding: 0.8rem 0; border-bottom: 1px solid var(--dark); }
         .detail-row:last-child { border-bottom: none; }
         .detail-label { color: var(--text-dim); font-size: 0.85rem; }
@@ -225,24 +225,25 @@
         .audit-btn.unable { background: linear-gradient(135deg, var(--audit-unable), #E55A5A); }
         .audit-btn.in-progress { background: linear-gradient(135deg, var(--audit-in-progress), #00B8D9); }
         .notes-section { margin-top: 1rem; }
-        .notes-label { color: var(--text-dim); font-size: 0.85rem; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.5rem; display: block; }
+        .notes-label { color: var(--text-dim); font-size: 0.85rem; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.6rem; display: block; }
         .notes-textarea { 
             width: 100%; 
             background: var(--dark); 
             border: 2px solid var(--dark); 
             color: var(--text); 
-            padding: 1rem; 
-            border-radius: 8px; 
+            padding: 1.2rem; 
+            border-radius: 10px; 
             font-family: 'JetBrains Mono', monospace; 
-            font-size: 0.9rem; 
-            min-height: 320px; 
+            font-size: 0.95rem; 
+            min-height: 480px; 
             resize: vertical; 
             transition: all 0.3s ease; 
+            line-height: 1.5;
         }
         .notes-textarea:focus { outline: none; border-color: var(--primary); }
         .auto-save-indicator { font-size: 0.75rem; color: var(--success); margin-top: 0.3rem; opacity: 0; transition: opacity 0.3s ease; }
         .auto-save-indicator.show { opacity: 1; }
-        .confirm-actions { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 1rem; }
+        .confirm-actions { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 1.2rem; }
         .toast { position: fixed; bottom: 2rem; right: 2rem; background: var(--dark-light); color: var(--text); padding: 1rem 1.5rem; border-radius: 8px; border: 2px solid var(--success); box-shadow: 0 4px 12px rgba(0,0,0,0.5); z-index: 2000; animation: slideIn 0.3s ease-out; display: none; }
         .toast.show { display: block; }
         .toast.error { border-color: var(--error); }
@@ -253,6 +254,8 @@
             .jobs-grid { grid-template-columns: 1fr; }
             .audit-actions { grid-template-columns: 1fr; }
             .header-actions { flex-direction: column; align-items: flex-start; }
+            .modal-content { padding: 1.5rem; max-width: 96%; }
+            .notes-textarea { min-height: 360px; }
         }
     </style>
 </head>
@@ -399,9 +402,9 @@
                     <div class="notes-section" id="notes-section">
                         <label class="notes-label" for="audit-notes">Audit Notes</label>
                         <textarea id="audit-notes" class="notes-textarea" placeholder="Add notes about the audit..."></textarea>
-                        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 0.5rem;">
+                        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 0.8rem; flex-wrap: wrap; gap: 0.8rem;">
                             <div class="auto-save-indicator" id="auto-save-indicator">💾 Notes auto-saved locally</div>
-                            <button class="btn btn-primary" onclick="saveNotesOnly()" style="padding: 0.6rem 1.2rem; font-size: 0.85rem;">💾 Save Notes to Database</button>
+                            <button class="btn btn-primary" onclick="saveNotesOnly()" style="padding: 0.7rem 1.4rem; font-size: 0.9rem;">💾 Save Notes to Database</button>
                         </div>
                     </div>
                 </div>
@@ -413,6 +416,7 @@
         </div>
     </div>
     <div class="toast" id="toast"></div>
+
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getFirestore, collection, getDocs, query, orderBy, doc, updateDoc, where } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
@@ -436,7 +440,9 @@
             document.getElementById('jobs-grid').innerHTML = '<div class="empty-state"><div class="empty-state-icon">⚠️</div><h3>Firebase Connection Failed</h3></div>';
         }
     </script>
+
     <script>
+        // ── (the rest of your JavaScript code remains completely unchanged) ──
         let allJobs = [];
         let filteredJobs = [];
         let currentJob = null;
@@ -444,7 +450,7 @@
         let autoSaveTimeout = null;
         let isFiltered = false;
         let showSurveyOnly = false;
-        // ── Survey helpers ──────────────────────────────────────────────
+
         function isSolarSurvey(job) {
             const t = (job.jobType || '').toLowerCase();
             return t.includes('solar survey') || t === 'survey';
@@ -463,7 +469,7 @@
             banner.classList.toggle('show', showSurveyOnly);
             applyFilters();
         }
-        // ───────────────────────────────────────────────────────────────
+
         function parseDate(dateStr) {
             if (!dateStr) return null;
             if (dateStr.includes('/')) {
@@ -650,7 +656,6 @@
                 return true;
             };
             filteredJobs = getBaseJobsForGrid().filter(filterFn);
-            // Stats always use non-survey pool
             const statsJobs = isFiltered ? getNonSurveyJobs().filter(filterFn) : getNonSurveyJobs();
             updateStats(statsJobs);
             renderJobs();
@@ -781,7 +786,6 @@
         }
         async function sendPendingAuditSummary() {
             try {
-                // Summary only covers non-survey jobs
                 const pending = getNonSurveyJobs().filter(j => j.status === 'Complete' && j.auditStatus === 'pending');
                 if (pending.length === 0) return;
                 const now = new Date();
